--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,7 @@
 {
   "version": "independent",
   "useWorkspaces": true,
-  "packages": [
-    "packages/**"
-  ],
+  "packages": ["packages/**"],
   "command": {
     "version": {
       "allowBranch": "main",
