--- a/package.json
+++ b/package.json
@@ -1,11 +1,52 @@
 {
   "name": "dapp-example",
   "private": true,
+  "scripts": {
+    "git-hooks:clean": "git config --unset core.hooksPath",
+    "git-hooks:set": "yarn husky install && yarn husky add .husky/pre-commit 'yarn lint:fix' && yarn husky add .husky/pre-commit 'yarn commitlint --edit $1'",
+    "git-hooks:reset": "yarn git-hooks:clean && yarn git-hooks:set",
+    "lint:check": "eslint       './**/*.{js,jsx,ts,tsx}' && prettier --list-different './**/*.{js,jsx,ts,tsx,css,scss,less,json,md,yml,yaml}'",
+    "lint:fix": "  eslint --fix './**/*.{js,jsx,ts,tsx}' && prettier --write          './**/*.{js,jsx,ts,tsx,css,scss,less,json,md,yml,yaml}'"
+  },
   "dependencies": {
     "@types/node": "^17.0.18"
   },
   "devDependencies": {
+    "@commitlint/cli": "^16.2.1",
+    "@commitlint/config-angular": "^16.2.1",
+    "eslint": "^8.9.0",
+    "eslint-config-airbnb-typescript-prettier": "^5.0.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-jest": "^26.1.1",
+    "eslint-plugin-jsdoc": "^37.9.4",
+    "husky": "^7.0.4",
     "lerna": "^4.0.0",
+    "prettier": "^2.5.1",
     "typescript": "^4.5.5"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:jest/recommended",
+      "plugin:jest/style",
+      "airbnb-typescript-prettier"
+    ],
+    "settings": {
+      "import/resolver": {
+        "typescript": {}
+      }
+    },
+    "env": {
+      "jest/globals": true
+    },
+    "rules": {
+      "no-underscore-dangle": "off",
+      "import/prefer-default-export": "off",
+      "react/require-default-props": "off",
+      "react/function-component-definition": "off"
+    }
+  },
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "all"
   }
 }
