--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,5 @@
     "baseUrl": "./packages"
   },
   "include": ["src"],
-  "exclude": [
-    "node_modules",
-    "**/*/build",
-  ]
+  "exclude": ["node_modules", "**/*/build"]
 }
