--- a/package.json
+++ b/package.json
@@ -6,20 +6,30 @@
     "git-hooks:set": "yarn husky install && yarn husky add .husky/pre-commit 'yarn lint:fix' && yarn husky add .husky/pre-commit 'yarn commitlint --edit $1'",
     "git-hooks:reset": "yarn git-hooks:clean && yarn git-hooks:set",
     "lint:check": "eslint       './**/*.{js,jsx,ts,tsx}' && prettier --list-different './**/*.{js,jsx,ts,tsx,css,scss,less,json,md,yml,yaml}'",
-    "lint:fix": "  eslint --fix './**/*.{js,jsx,ts,tsx}' && prettier --write          './**/*.{js,jsx,ts,tsx,css,scss,less,json,md,yml,yaml}'"
+    "lint:fix": "  eslint --fix './**/*.{js,jsx,ts,tsx}' && prettier --write          './**/*.{js,jsx,ts,tsx,css,scss,less,json,md,yml,yaml}'",
+    "test:test": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.16.2",
     "@types/node": "^17.0.18"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-angular": "^16.2.1",
+    "@testing-library/react": "^12.1.3",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.0",
     "eslint": "^8.9.0",
     "eslint-config-airbnb-typescript-prettier": "^5.0.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-jest": "^26.1.1",
     "eslint-plugin-jsdoc": "^37.9.4",
     "husky": "^7.0.4",
+    "jest": "^27.5.1",
     "lerna": "^4.0.0",
     "prettier": "^2.5.1",
     "typescript": "^4.5.5"
@@ -48,5 +58,21 @@
   "prettier": {
     "singleQuote": true,
     "trailingComma": "all"
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "setupFilesAfterEnv": [
+      "<rootDir>/jest-setup.ts"
+    ],
+    "collectCoverageFrom": [
+      "packages/**/*.{js,jsx,ts,tsx}",
+      "!/node_modules/**",
+      "!packages/**/src/*",
+      "!packages/**/*types.ts"
+    ],
+    "coverageReporters": [
+      "html",
+      "text"
+    ]
   }
 }
