build: add reset scripts

--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "dapp-example",
   "private": true,
   "scripts": {
+    "reset:clean": "rm -rf `find -type d -name 'node_modules'` `find -type d -name 'build'` `find -type d -name 'coverage'` `find -type f -name 'package-lock.json'` `find -type f -name 'pnpm-lock.yaml'` `find -type f -name 'yarn.lock'` .husky .eslintignore .prettierignore",
+    "reset:install": "ln -s .gitignore .eslintignore && ln -s .gitignore .prettierignore && pnpm install",
+    "reset:reset": "pnpm reset:clean && pnpm reset:install",
     "git-hooks:clean": "git config --unset core.hooksPath",
-    "git-hooks:set": "yarn husky install && yarn husky add .husky/pre-commit 'yarn lint:fix' && yarn husky add .husky/pre-commit 'yarn commitlint --edit $1'",
-    "git-hooks:reset": "yarn git-hooks:clean && yarn git-hooks:set",
+    "git-hooks:set": " husky install && pnpm husky add .husky/pre-commit 'pnpm lint:fix' && pnpm husky add .husky/pre-commit 'pnpm commitlint --edit $1'",
+    "git-hooks:reset": "pnpm git-hooks:clean && pnpm git-hooks:set",
     "lint:check": "eslint       './**/*.{js,jsx,ts,tsx}' && prettier --list-different './**/*.{js,jsx,ts,tsx,css,scss,less,json,md,yml,yaml}'",
     "lint:fix": "  eslint --fix './**/*.{js,jsx,ts,tsx}' && prettier --write          './**/*.{js,jsx,ts,tsx,css,scss,less,json,md,yml,yaml}'",
     "test:test": "jest --watch",
