--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,10 @@
     "forceConsistentCasingInFileNames": true,
     "sourceMap": true,
     "skipLibCheck": true,
-    "baseUrl": "./packages"
+    "baseUrl": "./packages",
+    "paths": {
+      "common-utils-general": ["common/utils/common-utils-general/src"]
+    }
   },
   "include": ["src"],
   "exclude": ["node_modules", "**/*/build", "**/*/__tests__"]
