--- a/packages/common/utils/common-utils-general/tsconfig.json
+++ b/packages/common/utils/common-utils-general/tsconfig.json
@@ -1,9 +1,4 @@
 {
   "extends": "../../../../tsconfig.json",
-  "compilerOptions": {
-    "composite": true,
-    "rootDir": "./src",
-    "outDir": "./build"
-  },
-  "include": ["./src"]
+  "include": ["src"]
 }
