--- a/packages/common/utils/common-utils-general/package.json
+++ b/packages/common/utils/common-utils-general/package.json
@@ -8,9 +8,11 @@
     "build"
   ],
   "scripts": {
-    "build": "tsc"
+    "build": "tsc -b tsconfig.build.json"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.4.2",
     "axios": "^0.26.0",
     "react": "^17.0.2"
