build: clean up typescript config

--- a/packages/common/utils/common-utils-general/package.json
+++ b/packages/common/utils/common-utils-general/package.json
@@ -8,7 +8,7 @@
     "build"
   ],
   "scripts": {
-    "build": "tsc -b tsconfig.build.json"
+    "build": "tsc -b"
   },
   "dependencies": {
     "@emotion/react": "^11.8.1",
