--- a/packages/common/utils/common-utils-general/tsconfig.json
+++ b/packages/common/utils/common-utils-general/tsconfig.json
@@ -1,4 +1,9 @@
 {
-  "extends": "../../../../tsconfig.json",
-  "include": ["src"]
+  "extends": "../../../../tsconfig.build.json",
+  "compilerOptions": {
+    "composite": true,
+    "rootDir": "src",
+    "outDir": "build"
+  },
+  "include": ["src"],
 }
