--- a/packages/common/stores/common-stores-redux/tsconfig.json
+++ b/packages/common/stores/common-stores-redux/tsconfig.json
@@ -6,4 +6,7 @@
     "outDir": "build"
   },
   "include": ["src"],
+  "references": [
+    { "path": "../../../common/utils/common-utils-general/tsconfig.json" }
+  ]
 }
