--- a/packages/web/apps/web-apps-dapp-example/tsconfig.json
+++ b/packages/web/apps/web-apps-dapp-example/tsconfig.json
@@ -7,6 +7,8 @@
   },
   "include": ["src", "vite.config.ts"],
   "references": [
-    { "path": "../../../common/utils/common-utils-general/tsconfig.json" }
+    { "path": "../../../common/stores/common-stores-redux/tsconfig.json" },
+    { "path": "../../../common/utils/common-utils-general/tsconfig.json" },
+    { "path": "../../../web/utils/web-utils-styles/tsconfig.json" }
   ]
 }
