--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "baseUrl": "./packages",
     "paths": {
       "@dapp-example/common-stores-redux": ["common/stores/common-stores-redux/src"],
-      "@dapp-example/common-utils-general": ["common/utils/common-utils-general/src"]
+      "@dapp-example/common-utils-general": ["common/utils/common-utils-general/src"],
+      "@dapp-example/web-utils-styles": ["web/utils/web-utils-styles/src"]
     }
   },
 }
