--- a/packages/common/stores/common-stores-dapp-example-redux/package.json
+++ b/packages/common/stores/common-stores-dapp-example-redux/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "@dapp-example/common-stores-redux",
+  "private": true,
+  "name": "@js-modules/common-stores-dapp-example-redux",
   "description": "Common Stores Redux",
   "version": "0.0.0",
   "license": "MIT",
@@ -11,7 +12,7 @@
     "build": "tsc -b"
   },
   "dependencies": {
-    "@dapp-example/common-utils-general": "^0.0.0",
+    "@js-modules/common-utils-general": "^0.0.0",
     "@types/uuid": "^8.3.4",
     "axios": "^0.26.0",
     "normalized-reducers-utils": "^1.1.15",
