build: cleanup package contracts-solidity-dapp-example

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,13 @@
   "compilerOptions": {
     "baseUrl": "./packages",
     "paths": {
-      "@js-modules/common-stores-dapp-example-redux": ["common/stores/common-stores-dapp-example-redux/src"],
-      "@js-modules/common-utils-general": ["common/utils/common-utils-general/src"],
+      "@js-modules/common-stores-dapp-example-redux": [
+        "common/stores/common-stores-dapp-example-redux/src"
+      ],
+      "@js-modules/common-utils-general": [
+        "common/utils/common-utils-general/src"
+      ],
       "@js-modules/web-utils-styles": ["web/utils/web-utils-styles/src"]
     }
-  },
+  }
 }
