--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "js-modules",
   "private": true,
   "scripts": {
-    "clean:main": "rm -rf `find -type d -name 'node_modules'` `find -type d -name 'build'` `find -type d -name 'coverage'` `find -type f -name 'package-lock.json'` `find -type f -name 'pnpm-lock.yaml'` `find -type f -name 'yarn.lock'` .husky .eslintignore .prettierignore",
+    "clean:main": "rm -rf `find -type d -name 'node_modules'` `find -type d -name 'build'` `find -type d -name 'coverage'` `find -type f -name 'package-lock.json'` `find -type f -name 'pnpm-lock.yaml'` `find -type f -name 'yarn.lock'` .husky .eslintignore .prettierignore .solhintignore",
     "clean:tsbuildinfo": "rm -rf `find -type f -name '*.tsbuildinfo'`",
     "reset:clean": "pnpm clean:main && pnpm clean:tsbuildinfo",
-    "reset:install": "ln -s .gitignore .eslintignore && ln -s .gitignore .prettierignore && pnpm install",
+    "reset:install": "ln -s .gitignore .eslintignore && ln -s .gitignore .prettierignore && ln -s .gitignore .solhintignore && pnpm install",
     "reset:reset": "pnpm reset:clean && pnpm reset:install",
     "git-hooks:clean": "git config --unset core.hooksPath",
     "git-hooks:set": " husky install && pnpm husky add .husky/pre-commit 'pnpm lint:fix' && pnpm husky add .husky/pre-commit 'pnpm commitlint --edit $1'",
     "git-hooks:reset": "pnpm git-hooks:clean && pnpm git-hooks:set",
-    "lint:check": "eslint       './**/*.{js,jsx,ts,tsx}' && prettier --list-different './**/*.{js,jsx,ts,tsx,css,scss,less,json,md,yml,yaml}'",
-    "lint:fix": "  eslint --fix './**/*.{js,jsx,ts,tsx}' && prettier --write          './**/*.{js,jsx,ts,tsx,css,scss,less,json,md,yml,yaml}'",
-    "test:test": "jest",
+    "lint:check": "eslint       './**/*.{js,jsx,ts,tsx}' && prettier --list-different './**/*.{js,jsx,ts,tsx,css,scss,less,json,md,yml,yaml}' && prettier --config ./prettier-config-solidity.js --list-different './**/*.sol' && solhint       './**/*.sol'",
+    "lint:fix": "  eslint --fix './**/*.{js,jsx,ts,tsx}' && prettier --write          './**/*.{js,jsx,ts,tsx,css,scss,less,json,md,yml,yaml}' && prettier --config ./prettier-config-solidity.js --write          './**/*.sol' && solhint --fix './**/*.sol'",
+    "test:test": "jest && lerna run test",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "lerna:build": "lerna run build",
@@ -23,7 +23,8 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@types/lodash": "^4.14.178",
     "@types/node": "^17.0.18",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "prettier-plugin-solidity": "^1.0.0-beta.19"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.11",
@@ -43,9 +44,11 @@
     "jest": "^27.5.1",
     "lerna": "^4.0.0",
     "prettier": "^2.5.1",
+    "solhint": "^3.3.7",
     "typescript": "^4.5.5"
   },
   "eslintConfig": {
+    "root": true,
     "extends": [
       "plugin:jest/recommended",
       "plugin:jest/style",
