--- a/packages/contracts/solidity/contracts-solidity-dapp-example/tsconfig.json
+++ b/packages/contracts/solidity/contracts-solidity-dapp-example/tsconfig.json
@@ -1,12 +1,11 @@
 {
+  "extends": "../../../../tsconfig.build.json",
   "compilerOptions": {
-    "target": "es2018",
+    "composite": true,
     "module": "commonjs",
-    "strict": true,
-    "esModuleInterop": true,
-    "outDir": "dist",
-    "declaration": true
+    "rootDir": "src",
+    "outDir": "build"
   },
-  "include": ["./scripts", "./test", "./typechain"],
+  "include": ["src"],
   "files": ["./hardhat.config.ts"]
 }
