--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -9,7 +9,7 @@
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
     "sourceMap": true,
-    "skipLibCheck": true,
+    "skipLibCheck": true
   },
   "exclude": ["**/*/node_modules", "**/*/build", "**/*/__tests__"]
 }
