--- a/package.json
+++ b/package.json
@@ -20,11 +20,7 @@
     "prepublish": "pnpm lint:fix && pnpm test:coverage && pnpm lerna:build"
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@types/lodash": "^4.14.178",
-    "@types/node": "^17.0.18",
-    "lodash": "^4.17.21",
-    "prettier-plugin-solidity": "^1.0.0-beta.19"
+    "@types/node": "^17.0.18"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.11",
@@ -32,6 +28,7 @@
     "@babel/preset-typescript": "^7.16.7",
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-angular": "^16.2.1",
+    "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.0",
@@ -44,6 +41,7 @@
     "jest": "^27.5.1",
     "lerna": "^4.0.0",
     "prettier": "^2.5.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.19",
     "solhint": "^3.3.7",
     "typescript": "^4.5.5"
   },
