build: add package tsconfig.build.json files

--- a/packages/common/stores/common-stores-dapp-example-redux/package.json
+++ b/packages/common/stores/common-stores-dapp-example-redux/package.json
@@ -9,7 +9,7 @@
     "build"
   ],
   "scripts": {
-    "build": "tsc -b"
+    "build": "tsc -b tsconfig.build.json"
   },
   "dependencies": {
     "@js-modules/common-utils-general": "^0.0.0",
