--- a/packages/common/stores/common-stores-dapp-example-redux/tsconfig.json
+++ b/packages/common/stores/common-stores-dapp-example-redux/tsconfig.json
@@ -1,12 +1,4 @@
 {
-  "extends": "../../../../tsconfig.build.json",
-  "compilerOptions": {
-    "composite": true,
-    "rootDir": "src",
-    "outDir": "build"
-  },
-  "include": ["src"],
-  "references": [
-    { "path": "../../../common/utils/common-utils-general/tsconfig.json" }
-  ]
+  "extends": "../../../../tsconfig.json",
+  "include": ["src"]
 }
