--- a/packages/web/apps/web-apps-dapp-example/package.json
+++ b/packages/web/apps/web-apps-dapp-example/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsc -b tsconfig.build.json && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
