--- a/packages/web/apps/web-apps-dapp-example/tsconfig.json
+++ b/packages/web/apps/web-apps-dapp-example/tsconfig.json
@@ -1,16 +1,8 @@
 {
-  "extends": "../../../../tsconfig.build.json",
+  "extends": "../../../../tsconfig.json",
   "compilerOptions": {
     "lib": ["dom", "dom.iterable", "esnext"],
     "jsx": "react-jsx",
-    "noEmit": true
   },
   "include": ["src", "vite.config.ts"],
-  "references": [
-    {
-      "path": "../../../common/stores/common-stores-dapp-example-redux/tsconfig.json"
-    },
-    { "path": "../../../common/utils/common-utils-general/tsconfig.json" },
-    { "path": "../../../web/utils/web-utils-styles/tsconfig.json" }
-  ]
 }
