--- a/packages/web/utils/web-utils-styles/package.json
+++ b/packages/web/utils/web-utils-styles/package.json
@@ -8,7 +8,7 @@
     "build"
   ],
   "scripts": {
-    "build": "tsc -b"
+    "build": "tsc -b tsconfig.build.json"
   },
   "dependencies": {
     "@emotion/react": "^11.8.1",
