--- a/packages/web/apps/web-apps-dapp-example/tsconfig.json
+++ b/packages/web/apps/web-apps-dapp-example/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../../../tsconfig.json",
   "compilerOptions": {
     "lib": ["dom", "dom.iterable", "esnext"],
-    "jsx": "react-jsx",
+    "jsx": "react-jsx"
   },
-  "include": ["src", "vite.config.ts"],
+  "include": ["src", "vite.config.ts"]
 }
