--- a/package.json
+++ b/package.json
@@ -23,9 +23,6 @@
     "@types/node": "^17.0.18"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
-    "@babel/preset-typescript": "^7.16.7",
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-angular": "^16.2.1",
     "@testing-library/jest-dom": "^5.16.2",
@@ -43,6 +40,7 @@
     "prettier": "^2.5.1",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
     "solhint": "^3.3.7",
+    "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
   },
   "eslintConfig": {
@@ -76,6 +74,9 @@
     "setupFilesAfterEnv": [
       "<rootDir>/jest-setup.ts"
     ],
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
     "collectCoverageFrom": [
       "packages/**/*.{js,jsx,ts,tsx}",
       "!/node_modules/**",
