--- a/packages/apps/messages/apps-messages-api/tsconfig.build.json
+++ b/packages/apps/messages/apps-messages-api/tsconfig.build.json
@@ -1,4 +1,9 @@
 {
-  "extends": "./tsconfig.json",
-  "exclude": ["node_modules", "test", "dist", "**/*spec.ts"]
+  "extends": "../../../../tsconfig.build.json",
+  "compilerOptions": {
+    "rootDir": "src",
+    "outDir": "build",
+    "module": "commonjs"
+  },
+  "include": ["src"]
 }
