--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -7,6 +7,8 @@
     "isolatedModules": true,
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "forceConsistentCasingInFileNames": true,
     "sourceMap": true,
     "skipLibCheck": true
