--- a/package.json
+++ b/package.json
@@ -63,7 +63,9 @@
       "no-underscore-dangle": "off",
       "import/prefer-default-export": "off",
       "react/require-default-props": "off",
-      "react/function-component-definition": "off"
+      "react/function-component-definition": "off",
+      "class-methods-use-this": "off",
+      "no-useless-constructor": "off"
     }
   },
   "prettier": {
