--- a/packages/apps/messages/apps-messages-api/package.json
+++ b/packages/apps/messages/apps-messages-api/package.json
@@ -15,6 +15,8 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/supertest": "^2.0.11",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
