--- a/packages/apps/messages/apps-messages-api/tsconfig.build.json
+++ b/packages/apps/messages/apps-messages-api/tsconfig.build.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "build",
-    "module": "commonjs"
+    "module": "commonjs",
+    "strictNullChecks": false
   },
   "include": ["src"]
 }
