--- a/packages/apps/messages/apps-messages-api/tsconfig.json
+++ b/packages/apps/messages/apps-messages-api/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "../../../../tsconfig.json",
   "compilerOptions": {
-    "module": "commonjs"
+    "module": "commonjs",
+    "strictNullChecks": false,
   },
   "include": ["src"]
 }
