--- a/packages/apps/nest-examples/apps-nest-examples-computer/tsconfig.json
+++ b/packages/apps/nest-examples/apps-nest-examples-computer/tsconfig.json
@@ -2,7 +2,9 @@
   "extends": "../../../../tsconfig.json",
   "compilerOptions": {
     "module": "commonjs",
-    "strictNullChecks": false,
+    "strictNullChecks": false
   },
-  "include": ["src"]
+  "include": [
+    "src"
+  ]
 }
