--- a/packages/apps/nest-examples/apps-nest-examples-computer/package.json
+++ b/packages/apps/nest-examples/apps-nest-examples-computer/package.json
@@ -28,5 +28,12 @@
     "supertest": "^6.1.3",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0"
+  },
+  "eslintConfig": {
+    "rules": {
+      "class-methods-use-this": "off",
+      "no-useless-constructor": "off",
+      "no-param-reassign": "off"
+    }
   }
 }
