--- a/packages/common/react/common-react-hooks/package.json
+++ b/packages/common/react/common-react-hooks/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@js-modules/common-utils-general",
-  "description": "Common Utils General",
+  "name": "@js-modules/common-react-hooks",
+  "description": "Common React Hooks",
   "version": "0.0.0",
   "license": "MIT",
   "main": "build/index",
@@ -11,6 +11,6 @@
     "build": "tsc -b tsconfig.build.json"
   },
   "dependencies": {
-    "axios": "^0.26.0"
+    "react": "^17.0.2"
   }
 }
