--- a/packages/apps/dapp/apps-dapp-web/package.json
+++ b/packages/apps/dapp/apps-dapp-web/package.json
@@ -16,17 +16,21 @@
     "@js-modules/common-utils-general": "^0.0.0",
     "@js-modules/web-react-hooks": "0.0.0",
     "@js-modules/web-styles-material-ui": "^0.0.0",
-    "@mui/lab": "^5.0.0-alpha.69",
+    "@mui/icons-material": "^5.5.0",
     "@mui/material": "^5.4.2",
+    "@types/lodash": "^4.14.178",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.22",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-window": "^1.8.5",
     "@vitejs/plugin-react": "^1.0.7",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
+    "react-window": "^1.8.6",
     "vite": "^2.8.0",
     "vite-tsconfig-paths": "^3.4.0"
   }
