--- a/packages/apps/dapp/apps-dapp-store-redux/package.json
+++ b/packages/apps/dapp/apps-dapp-store-redux/package.json
@@ -21,6 +21,7 @@
     "ethers": "^5.5.4",
     "lodash": "^4.17.21",
     "normalized-reducers-utils": "^1.1.15",
+    "react": "^17.0.2",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
