--- a/packages/apps/dapp/apps-dapp-web/tsconfig.build.json
+++ b/packages/apps/dapp/apps-dapp-web/tsconfig.build.json
@@ -13,6 +13,7 @@
     {
       "path": "../../../common/utils/common-utils-general/tsconfig.build.json"
     },
+    { "path": "../../../web/react/web-react-components/tsconfig.build.json"},
     { "path": "../../../web/react/web-react-hooks/tsconfig.build.json"},
     { "path": "../../../web/styles/web-styles-material-ui/tsconfig.build.json" }
   ]
