--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
       "@js-modules/common-utils-general": [
         "common/utils/common-utils-general/src"
       ],
+      "@js-modules/web-react-components": ["web/react/web-react-components/src"],
       "@js-modules/web-react-hooks": ["web/react/web-react-hooks/src"],
       "@js-modules/web-styles-material-ui": [
         "web/styles/web-styles-material-ui/src"
