--- a/packages/web/react/web-react-components/package.json
+++ b/packages/web/react/web-react-components/package.json
@@ -13,9 +13,12 @@
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@mui/material": "^5.4.2",
     "@types/react": "^17.0.39",
     "@types/react-window": "^1.8.5",
+    "clsx": "^1.1.1",
     "react": "^17.0.2",
     "react-window": "^1.8.6"
   }
