--- a/packages/apps/dapp/apps-dapp-web/package.json
+++ b/packages/apps/dapp/apps-dapp-web/package.json
@@ -15,12 +15,12 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
-    "@js-modules/apps-dapp-store-redux": "^0.0.0",
-    "@js-modules/common-react-hooks": "^0.0.0",
-    "@js-modules/common-utils-general": "^0.0.0",
-    "@js-modules/web-react-components": "^0.0.0",
-    "@js-modules/web-react-hooks": "0.0.0",
-    "@js-modules/web-styles-material-ui": "^0.0.0",
+    "@js-modules/apps-dapp-store-redux": "workspace:^0.0.0",
+    "@js-modules/common-react-hooks": "workspace:^0.0.0",
+    "@js-modules/common-utils-general": "workspace:^0.0.0",
+    "@js-modules/web-react-components": "workspace:^0.0.0",
+    "@js-modules/web-react-hooks": "workspace:^0.0.0",
+    "@js-modules/web-styles-material-ui": "workspace:^0.0.0",
     "@mui/icons-material": "^5.5.0",
     "@mui/material": "^5.4.2",
     "@types/lodash": "^4.14.178",
