fix: create icon generation logic

--- a/packages/apps/segway-rental/apps-segway-rental-store-redux/tsconfig.build.json
+++ b/packages/apps/segway-rental/apps-segway-rental-store-redux/tsconfig.build.json
@@ -10,7 +10,9 @@
     {
       "path": "../../../apps/segway-rental/apps-segway-rental-utils/tsconfig.build.json"
     },
-    { "path": "../../../common/utils/common-utils-general/tsconfig.build.json" },
+    {
+      "path": "../../../common/utils/common-utils-general/tsconfig.build.json"
+    },
     { "path": "../../../web/react/web-react-components/tsconfig.build.json" }
   ]
 }
