--- a/packages/web/react/web-react-components/package.json
+++ b/packages/web/react/web-react-components/package.json
@@ -15,11 +15,17 @@
     "@emotion/styled": "^11.8.1",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@js-modules/common-react-hooks": "workspace:^0.0.0",
     "@mui/material": "^5.4.2",
+    "@types/lodash": "^4.14.178",
     "@types/react": "^17.0.39",
+    "@types/react-redux": "^7.1.22",
     "@types/react-window": "^1.8.5",
     "clsx": "^1.1.1",
+    "lodash": "^4.17.21",
+    "normalized-reducers-utils": "^1.1.15",
     "react": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-window": "^1.8.6"
   }
 }
