fix: MuiTab theme overrides

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -4,6 +4,7 @@
     "target": "esnext",
     "moduleResolution": "node",
     "strict": true,
+    "esModuleInterop": true,
     "isolatedModules": true,
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
