--- a/packages/common/utils/common-utils-general/package.json
+++ b/packages/common/utils/common-utils-general/package.json
@@ -11,6 +11,8 @@
     "build": "tsc -b tsconfig.build.json"
   },
   "dependencies": {
-    "axios": "^0.26.0"
+    "axios": "^0.26.0",
+    "@types/lodash": "^4.14.182",
+    "lodash": "^4.17.21"
   }
 }
