--- a/packages/web/react/web-react-nav/package.json
+++ b/packages/web/react/web-react-nav/package.json
@@ -14,10 +14,13 @@
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
-    "@fortawesome/free-regular-svg-icons": "^6.1.0",
-    "@fortawesome/free-solid-svg-icons": "^6.1.0",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@js-modules/common-react-hooks": "workspace:^0.0.0",
+    "@js-modules/web-react-components": "workspace:^0.0.0",
+    "@js-modules/web-react-hooks": "workspace:^0.0.0",
     "@mui/material": "^5.4.2",
-    "@types/lodash": "^4.14.178",
+    "@types/lodash": "^4.14.182",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "lodash": "^4.17.21",
