--- a/packages/apps/segway-rental/apps-segway-rental-web/package.json
+++ b/packages/apps/segway-rental/apps-segway-rental-web/package.json
@@ -40,6 +40,7 @@
     "react-router-dom": "^6.2.1",
     "uuid": "^8.3.2",
     "vite": "^2.8.0",
+    "vite-plugin-svgr": "^2.2.0",
     "vite-tsconfig-paths": "^3.4.0"
   }
 }
