--- a/packages/apps/segway-rental/apps-segway-rental-web/package.json
+++ b/packages/apps/segway-rental/apps-segway-rental-web/package.json
@@ -10,11 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.8.1",
-    "@emotion/styled": "^11.8.1",
-    "@fortawesome/free-brands-svg-icons": "^6.1.1",
-    "@fortawesome/free-regular-svg-icons": "^6.1.0",
-    "@fortawesome/free-solid-svg-icons": "^6.1.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@js-modules/apps-segway-rental-mui-icons": "workspace:^0.0.0",
     "@js-modules/apps-segway-rental-store-redux": "workspace:^0.0.0",
     "@js-modules/apps-segway-rental-utils": "workspace:^0.0.0",
@@ -24,23 +24,23 @@
     "@js-modules/web-react-hooks": "workspace:^0.0.0",
     "@js-modules/web-react-nav": "workspace:^0.0.0",
     "@js-modules/web-styles-material-ui": "workspace:^0.0.0",
-    "@mui/icons-material": "^5.5.0",
-    "@mui/lab": "^5.0.0-alpha.74",
-    "@mui/material": "^5.4.2",
-    "@types/lodash": "^4.14.182",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
-    "@types/react-redux": "^7.1.22",
-    "@vitejs/plugin-react": "^1.0.7",
-    "date-fns": "^2.28.0",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/lab": "5.0.0-alpha.117",
+    "@mui/material": "^5.11.6",
+    "@types/lodash": "^4.14.191",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "@types/react-redux": "^7.1.25",
+    "@vitejs/plugin-react": "^3.0.1",
+    "date-fns": "^2.29.3",
     "lodash": "^4.17.21",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.1",
-    "uuid": "^8.3.2",
-    "vite": "^2.8.0",
-    "vite-plugin-svgr": "^2.2.0",
-    "vite-tsconfig-paths": "^3.4.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.0",
+    "uuid": "^9.0.0",
+    "vite": "^4.0.4",
+    "vite-plugin-svgr": "^2.4.0",
+    "vite-tsconfig-paths": "^4.0.5"
   }
 }
