--- a/packages/api/nest/api-nest-utils/tsconfig.build.json
+++ b/packages/api/nest/api-nest-utils/tsconfig.build.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../../../tsconfig.build.json",
   "compilerOptions": {
-    "strictNullChecks": false,
+    "composite": true,
     "rootDir": "src",
     "outDir": "build",
     "module": "commonjs"
