--- a/packages/web/react/web-react-components/package.json
+++ b/packages/web/react/web-react-components/package.json
@@ -16,15 +16,22 @@
     "@js-modules/common-react-hooks": "workspace:^0.0.0",
     "@js-modules/web-styles-material-ui": "workspace:^0.0.0",
     "@mui/material": "^5.11.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/lodash": "^4.14.191",
     "@types/react": "^18.0.27",
     "@types/react-redux": "^7.1.25",
     "@types/react-window": "^1.8.5",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "clsx": "^1.2.1",
     "lodash": "^4.17.21",
     "normalized-reducers-utils": "^1.1.17",
     "react": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-window": "^1.8.8"
+  },
+  "devDependencies": {
+    "jest-environment-jsdom": "^29.4.2"
   }
 }
