fix: users controller

--- a/packages/apps/nest-examples/apps-nest-examples-my-car-value/package.json
+++ b/packages/apps/nest-examples/apps-nest-examples-my-car-value/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nestjs/common": "^9.2.1",
     "@nestjs/core": "^9.2.1",
+    "@types/lodash": "^4.14.191",
     "@nestjs/platform-express": "^9.2.1",
     "@nestjs/testing": "^9.2.1",
     "@nestjs/typeorm": "^9.0.1",
@@ -20,6 +21,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-session": "^2.0.0",
+    "lodash": "^4.17.21",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "sqlite3": "^5.1.4",
