--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "git-hooks:set": " husky install && pnpm husky add .husky/pre-commit 'pnpm lint:fix' && pnpm husky add .husky/pre-commit 'pnpm commitlint --edit $1'",
     "git-hooks:reset": "pnpm git-hooks:clean && pnpm git-hooks:set",
     "test:test": "jest && lerna run test",
-    "test:watch": "jest --watch --maxWorkers=1",
+    "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "lint:check": "eslint       './**/*.{js,jsx,ts,tsx}' && prettier --list-different './**/*.{js,jsx,ts,tsx,css,scss,less,json,md,yml,yaml}' && prettier --config ./prettier-config-solidity.js --list-different './**/*.sol' && solhint       './**/*.sol'",
     "lint:fix": "  eslint --fix './**/*.{js,jsx,ts,tsx}' && prettier --write          './**/*.{js,jsx,ts,tsx,css,scss,less,json,md,yml,yaml}' && prettier --config ./prettier-config-solidity.js --write          './**/*.sol' && solhint --fix './**/*.sol'",
@@ -27,6 +27,7 @@
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-angular": "^17.4.2",
     "@types/jest": "^29.4.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.33.0",
     "eslint-config-airbnb-typescript-prettier": "^5.0.0",
     "eslint-import-resolver-typescript": "^3.5.3",
