--- a/packages/apps/nest-examples/apps-nest-examples-my-car-value/package.json
+++ b/packages/apps/nest-examples/apps-nest-examples-my-car-value/package.json
@@ -6,17 +6,18 @@
   "license": "MIT",
   "scripts": {
     "build": "nest build -p tsconfig.build.json",
-    "dev": "nest start --watch",
+    "dev": "cross-env NODE_ENV=dev nest start --watch",
     "prod": "node build/main"
   },
   "dependencies": {
     "@nestjs/common": "^9.2.1",
+    "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.2.1",
-    "@types/lodash": "^4.14.191",
     "@nestjs/platform-express": "^9.2.1",
     "@nestjs/testing": "^9.2.1",
     "@nestjs/typeorm": "^9.0.1",
     "@types/cookie-session": "^2.0.44",
+    "@types/lodash": "^4.14.191",
     "@types/supertest": "^2.0.12",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
