--- a/packages/apps/nest-examples/apps-nest-examples-my-car-value/package.json
+++ b/packages/apps/nest-examples/apps-nest-examples-my-car-value/package.json
@@ -22,6 +22,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-session": "^2.0.0",
+    "express": "^4.18.2",
     "lodash": "^4.17.21",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
