fix: nest-examples-users

--- a/packages/apps/itlib/apps-libit-api/tsconfig.build.json
+++ b/packages/apps/itlib/apps-libit-api/tsconfig.build.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../../../tsconfig.build.json",
   "compilerOptions": {
-    "composite": true,
+    "strictNullChecks": false,
     "rootDir": "src",
     "outDir": "build",
     "module": "commonjs"
