--- a/packages/apps/itlib/apps-libit-api/package.json
+++ b/packages/apps/itlib/apps-libit-api/package.json
@@ -1,26 +1,31 @@
 {
-  "name": "@js-modules/api-nest-utils",
-  "description": "Api Nest Utils",
+  "private": true,
+  "name": "@js-modules/apps-libit-api",
+  "description": "Apps Libit Api",
   "version": "0.0.0",
   "license": "MIT",
-  "main": "build/index",
-  "files": [
-    "build"
-  ],
   "scripts": {
-    "build": "tsc -b tsconfig.build.json"
+    "build": "nest build -p tsconfig.build.json",
+    "dev": "cross-env NODE_ENV=dev nest start --watch",
+    "prod": "node build/main",
+    "typeorm": "pnpm build && cross-env NODE_ENV=dev typeorm -d build/config/config.typeorm.dataSource.js"
   },
   "dependencies": {
     "@nestjs/common": "^9.2.1",
+    "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.2.1",
     "@nestjs/platform-express": "^9.2.1",
     "@nestjs/testing": "^9.2.1",
     "@nestjs/typeorm": "^9.0.1",
     "@types/cookie-session": "^2.0.44",
+    "@types/lodash": "^4.14.191",
     "@types/supertest": "^2.0.12",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-session": "^2.0.0",
+    "express": "^4.18.2",
+    "lodash": "^4.17.21",
+    "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "sqlite3": "^5.1.4",
