--- a/packages/apps/itlib/apps-libit-api/tsconfig.json
+++ b/packages/apps/itlib/apps-libit-api/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "extends": "../../../../tsconfig.json",
-  "compilerOptions": {},
+  "compilerOptions": {
+    "strictNullChecks": false
+  },
   "include": ["src"]
 }
