--- a/packages/apps/itlib/apps-libit-api/package.json
+++ b/packages/apps/itlib/apps-libit-api/package.json
@@ -15,6 +15,7 @@
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.2.1",
     "@nestjs/platform-express": "^9.2.1",
+    "@nestjs/swagger": "^6.2.1",
     "@nestjs/testing": "^9.2.1",
     "@nestjs/typeorm": "^9.0.1",
     "@types/cookie-session": "^2.0.44",
