--- a/packages/apps/itlib/apps-libit-api/package.json
+++ b/packages/apps/itlib/apps-libit-api/package.json
@@ -11,6 +11,7 @@
     "typeorm": "pnpm build && cross-env NODE_ENV=dev typeorm -d build/config/config.typeorm.dataSource.js"
   },
   "dependencies": {
+    "@js-modules/common-utils-general": "workspace:^0.0.0",
     "@nestjs/common": "^9.2.1",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.2.1",
