fix: change tsconfig.json module 'esnext' -> 'commonjs'

--- a/packages/apps/itlib/apps-libit-api/tsconfig.build.json
+++ b/packages/apps/itlib/apps-libit-api/tsconfig.build.json
@@ -3,8 +3,7 @@
   "compilerOptions": {
     "strictNullChecks": false,
     "rootDir": "src",
-    "outDir": "build",
-    "module": "commonjs"
+    "outDir": "build"
   },
   "include": ["src"]
 }
