--- a/packages/apps/nest-examples/apps-nest-examples-computer/tsconfig.build.json
+++ b/packages/apps/nest-examples/apps-nest-examples-computer/tsconfig.build.json
@@ -3,8 +3,7 @@
   "compilerOptions": {
     "strictNullChecks": false,
     "rootDir": "src",
-    "outDir": "build",
-    "module": "commonjs"
+    "outDir": "build"
   },
   "include": ["src"]
 }
