--- a/packages/common/redux/common-redux-reducer-auth-keycloak/package.json
+++ b/packages/common/redux/common-redux-reducer-auth-keycloak/package.json
@@ -15,6 +15,9 @@
     "@js-modules/common-utils-general": "workspace:^0.0.0",
     "@js-modules/web-react-components": "workspace:^0.0.0",
     "@types/lodash": "^4.14.191",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "@types/react-redux": "^7.1.25",
     "@types/uuid": "^9.0.0",
     "axios": "^1.2.6",
     "keycloak-js": "^21.0.1",
