--- a/packages/apps/travel-log/apps-travel-log-web-my-workspace/package.json
+++ b/packages/apps/travel-log/apps-travel-log-web-my-workspace/package.json
@@ -1,44 +1,36 @@
 {
   "private": true,
-  "name": "@js-modules/apps-travel-log-web",
-  "description": "Apps Travel Log Web",
+  "name": "@js-modules/apps-travel-log-web-my-workspace",
+  "description": "Apps Travel Log Web My Workspace",
   "version": "0.0.0",
   "license": "MIT",
+  "main": "build/index",
+  "files": [
+    "build"
+  ],
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b tsconfig.build.json && vite build",
-    "preview": "vite preview"
+    "build": "tsc -b tsconfig.build.json"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@js-modules/apps-travel-log-common-constants": "workspace:^0.0.0",
     "@js-modules/apps-travel-log-common-store-redux": "workspace:^0.0.0",
     "@js-modules/apps-travel-log-web-components": "workspace:^0.0.0",
-    "@js-modules/apps-travel-log-web-my-feeds": "workspace:^0.0.0",
-    "@js-modules/apps-travel-log-web-site": "workspace:^0.0.0",
-    "@js-modules/common-react-hooks": "workspace:^0.0.0",
-    "@js-modules/common-utils-general": "workspace:^0.0.0",
     "@js-modules/web-react-components": "workspace:^0.0.0",
     "@js-modules/web-react-hooks": "workspace:^0.0.0",
     "@js-modules/web-react-nav": "workspace:^0.0.0",
-    "@js-modules/web-styles-material-ui": "workspace:^0.0.0",
-    "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.6",
     "@types/lodash": "^4.14.191",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/react-redux": "^7.1.25",
-    "@vitejs/plugin-react": "^3.0.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.8.0",
-    "vite": "^4.0.4",
-    "vite-tsconfig-paths": "^4.0.5"
+    "react-router-dom": "^6.8.0"
   }
 }
