--- a/packages/api/nest/api-nest-module-auth-keycloak/package.json
+++ b/packages/api/nest/api-nest-module-auth-keycloak/package.json
@@ -28,6 +28,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "express": "^4.18.2",
+    "keycloak-connect": "^21.0.1",
+    "keycloak-js": "^21.0.1",
     "lodash": "^4.17.21",
     "nest-keycloak-connect": "^1.9.1",
     "reflect-metadata": "^0.1.13",
