--- a/packages/apps/travel-log/apps-travel-log-web/package.json
+++ b/packages/apps/travel-log/apps-travel-log-web/package.json
@@ -33,6 +33,7 @@
     "@types/react-dom": "^18.0.10",
     "@types/react-redux": "^7.1.25",
     "@vitejs/plugin-react": "^3.0.1",
+    "keycloak-js": "^21.0.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
