--- a/packages/apps/travel-log/apps-travel-log-api-core/package.json
+++ b/packages/apps/travel-log/apps-travel-log-api-core/package.json
@@ -11,6 +11,7 @@
     "typeorm": "pnpm build && cross-env NODE_ENV=dev typeorm -d build/config/config.typeorm.dataSource.js"
   },
   "dependencies": {
+    "@js-modules/api-nest-keycloak-admin-client-cjs": "workspace:^0.0.0",
     "@js-modules/api-nest-module-auth-keycloak": "workspace:^0.0.0",
     "@js-modules/api-nest-utils": "workspace:^0.0.0",
     "@js-modules/apps-travel-log-common-constants": "workspace:^0.0.0",
