--- a/package.json
+++ b/package.json
@@ -4,20 +4,22 @@
   "scripts": {
     "clean:main": "rm -rf `find -type d -name 'node_modules'` `find -type d -name 'build'` `find -type d -name 'coverage'` .husky .eslintignore .prettierignore .solhintignore",
     "clean:tsbuildinfo": "rm -rf `find -type f -name '*.tsbuildinfo'`",
-    "clean:lockFiles": "rm -rf `find -type f -name 'package-lock.json'` `find -type f -name 'pnpm-lock.yaml'` `find -type f -name 'yarn.lock'`",
+    "clean:graph": "rm -rf `find -type d -name 'dependency-graph*'` `find -type f -name 'dependency-graph*'`",
+    "clean:lock-files": "rm -rf `find -type f -name 'package-lock.json'` `find -type f -name 'pnpm-lock.yaml'` `find -type f -name 'yarn.lock'`",
+    "clean:git-hooks": "git config --unset core.hooksPath",
     "reset:clean": "pnpm clean:main && pnpm clean:tsbuildinfo",
     "reset:install": "ln -s .gitignore .eslintignore && ln -s .gitignore .prettierignore && ln -s .gitignore .solhintignore && pnpm install",
     "reset:reset": "pnpm reset:clean && pnpm reset:install",
-    "git-hooks:clean": "git config --unset core.hooksPath",
     "git-hooks:set": " husky install && pnpm husky add .husky/pre-commit 'pnpm lint:fix' && pnpm husky add .husky/pre-commit 'pnpm commitlint --edit $1'",
-    "git-hooks:reset": "pnpm git-hooks:clean && pnpm git-hooks:set",
+    "git-hooks:reset": "pnpm clean:git-hooks && pnpm git-hooks:set",
     "test:test": "jest && lerna run test",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "lint:check": "eslint       './**/*.{js,jsx,ts,tsx}' && prettier --list-different './**/*.{js,jsx,ts,tsx,css,scss,less,json,md,yml,yaml}' && prettier --config ./prettier-config-solidity.js --list-different './**/*.sol' && solhint       './**/*.sol'",
     "lint:fix": "  eslint --fix './**/*.{js,jsx,ts,tsx}' && prettier --write          './**/*.{js,jsx,ts,tsx,css,scss,less,json,md,yml,yaml}' && prettier --config ./prettier-config-solidity.js --write          './**/*.sol' && solhint --fix './**/*.sol'",
+    "graph:dependency-map": "monorepo-mapper --format pdf",
+    "graph:package-tree": " tree -d -L 3 packages",
     "lerna:build": "lerna run build",
-    "dev:apps-dapp-web": "pnpm --filter @js-modules/apps-dapp-web dev",
     "prepublish": "pnpm lint:fix && pnpm test:coverage && pnpm lerna:build"
   },
   "dependencies": {
@@ -36,6 +38,7 @@
     "husky": "^8.0.3",
     "jest": "^29.5.0",
     "lerna": "^6.6.1",
+    "monorepo-mapper": "^1.0.5",
     "prettier": "^2.8.7",
     "prettier-plugin-solidity": "^1.1.3",
     "solhint": "^3.4.1",
@@ -61,7 +64,8 @@
       "no-underscore-dangle": "off",
       "import/prefer-default-export": "off",
       "react/require-default-props": "off",
-      "react/function-component-definition": "off"
+      "react/function-component-definition": "off",
+      "@typescript-eslint/no-non-null-assertion": "off"
     }
   },
   "prettier": {
