--- a/packages/common/redux/common-redux-utils-normalized-reducers/package.json
+++ b/packages/common/redux/common-redux-utils-normalized-reducers/package.json
@@ -13,7 +13,6 @@
   },
   "dependencies": {
     "@js-modules/common-utils-general": "workspace:^0.0.0",
-    "@js-modules/web-react-components": "workspace:^0.0.0",
     "@testing-library/react": "^14.0.0",
     "@types/lodash": "^4.14.194",
     "@types/react": "^18.0.37",
@@ -30,5 +29,6 @@
     "redux-saga-test-plan": "^4.0.6",
     "reselect": "^4.1.8",
     "uuid": "^9.0.0"
-  }
+  },
+  "eslintConfig": {}
 }
