--- a/packages/common/utils/common-utils-general/package.json
+++ b/packages/common/utils/common-utils-general/package.json
@@ -14,6 +14,8 @@
     "@types/lodash": "^4.14.194",
     "axios": "^1.3.6",
     "axios-cache-interceptor": "^1.0.1",
+    "countries-list": "^2.6.1",
     "lodash": "^4.17.21"
-  }
+  },
+  "eslintConfig": {}
 }
