--- a/packages/web/react/web-react-hooks/package.json
+++ b/packages/web/react/web-react-hooks/package.json
@@ -13,13 +13,17 @@
   "dependencies": {
     "@js-modules/common-react-hooks": "workspace:^0.0.0",
     "@js-modules/common-redux-utils-normalized-reducers": "workspace:^0.0.0",
+    "@js-modules/common-utils-general": "workspace:^0.0.0",
     "@mui/material": "^5.12.1",
     "@types/lodash": "^4.14.194",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@types/validator": "^13.7.17",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0"
-  }
+    "react-router-dom": "^6.10.0",
+    "validator": "^13.9.0"
+  },
+  "eslintConfig": {}
 }
